src/test/resources/de/monticore/umlcd4a/cocos/mcg/valid/C4A56.cd
package de.monticore.umlcd4a.cocos.mcg.valid;

classdiagram C4A56 {
  public interface A;
  interface B;
}
