src/test/resources/de/monticore/umlcd4a/cocos/mcg/invalid/C4A57.cd
package de.monticore.umlcd4a.cocos.mcg.invalid;

classdiagram C4A57 {
  class A;
  class B;

  association Assoc1 abstract A -> B;
  association Assoc2 A -> B abstract;

}
